# torchinstaller

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/torchinstaller/: _parse.py  main.py  utils.py
src/torchinstaller/config/: commands.md  commands.yaml
tests/: test_config.py
torchinstaller/: __main__.py  _parse.py  _soup.py  main.py  parse.py  utils.py
torchinstaller/config/: commands.bak.toml  commands.md  commands.toml  pyg-commands.md  pyg-commands.toml  torch-commands.md  torch-commands.toml
