[tool.poetry]
name = "torchinstaller"
version = "0.5.9"
description = "Simple utility to install pytorch, pytorch-geometric and pytorch-lightning. Detects CUDA version automatically."
authors = ["Daniel Capecci <7775585+dk0d@users.noreply.github.com>"]
readme = "README.md"

include = [{ path = "torchinstaller/config/commands.toml" }]

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "^0.11.7"
rich = "^13.3.3"

[tool.poetry.urls]
github = "https://github.com/dk0d/torchinstaller.git"

[tool.poetry.scripts]
torchinstall = "torchinstaller.main:main"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
