[project]
name = "torchinstaller"
description = "Simple utility to install pytorch, pytorch-geometric and pytorch-lightning. Detects CUDA version automatically."
authors = [
  { name = "Daniel Capecci", email = "7775585+dk0d@users.noreply.github.com" },
]
dependencies = ["tomlkit<1.0.0,>=0.11.7", "rich<14.0.0,>=13.3.3"]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }
dynamic = ['version']

[project.urls]
github = "https://github.com/dk0d/torchinstaller.git"

[project.scripts]
torchinstall = "torchinstaller.main:main"

[tool.pdm.dev-dependencies]
test = ["pytest>=7.3.1"]

[[tool.pdm.build.includes]]
path = "torchinstaller/config/commands.toml"


[tool.hatch.version]
path = "torchinstaller/__version__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
