[project]
name = "torchinstaller"
description = "Simple utility to install pytorch, pytorch-geometric and pytorch-lightning. Detects CUDA version automatically."
authors = [
    { name = "Daniel Capecci", email = "7775585+dk0d@users.noreply.github.com" },
]
dependencies = ["tomlkit<1.0.0,>=0.11.7", "rich<14.0.0,>=13.3.3", "typer"]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = { text = "MIT" }
dynamic = ['version']

[project.urls]
github = "https://github.com/dk0d/torchinstaller.git"

[project.scripts]
torchinstall = "torchinstaller.main:main"

[project.optional-dependencies]
sync = ["beautifulsoup4", 'unmarkd', 'requests']


[tool.ruff]
line-length = 120

[tool.uv]

[tool.hatch.version]
source = 'regex_commit'
path = "src/torchinstaller/__version__.py"
commit_message = "🚀 Version {current_version} -> {new_version}"


[tool.hatch.build.targets.wheel]
artifacts = [
    "src/torchinstaller/**/*.toml",
    "src/torchinstaller/**/*.md",
    "src/torchinstaller/**/*.yaml",
    "src/torchinstaller/**/*.yml",
]

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"
